# cppfront-practice

./: .copier-answers.yml  .pre-commit-config.yaml  .renovaterc.json  404.html  CMakeLists.txt  LICENSE  Makefile  README.md  index.html  mkdocs.yml  sitemap.xml  vcpkg.json
.devcontainer/: devcontainer.json
.github/workflows/: cd.yml  ci.yml  codeql.yml  renovate.yml  semantic-release.yml
cmake/vcpkg/: vcpkg.toolchain.cmake
cmake/vcpkg/ports/: index.html
cmake/vcpkg/ports/cppfront/: CMakeLists.txt  CppfrontHelpers.cmake  cppfront-config.cmake.in  portfile.cmake  vcpkg.json
cmake/vcpkg/scripts/toolchains/: index.html
cmake/vcpkg/triplets/: index.html  x64-osx.cmake
docs/: index.html
search/: search_index.json
src/regressoin/: CMakeLists.txt
src/regressoin/src/: main.cpp2
src/regressoin/tests/: mix-float-literals.cpp2  mix-hello.cpp2
